# rust-curve25519-fiat

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
curve25519-fiat/: Cargo.toml  build.rs
curve25519-fiat-sys/: Cargo.toml  build.rs
curve25519-fiat-sys/src/: bindings.rs
curve25519-fiat/src/: lib.rs
patches/: fiat_library.patch
src/: lib.rs
src/include/: curve25519_64.h
