[package]
name = "curve25519-fiat"
build = "build.rs"
version = "0.1.0"
authors = ["François Garillot <fga@fb.com>"]
description = "Fiat-crypto generated Rust for curve25519_64"
repository = "https://github.com/facebookexperimental/rust-curve25519-fiat"
readme = "README.md"
license = "Apache-2.0"
edition="2018"



[lib]
test = false # we have no unit tests
doctest = false # and no doc tests
